--- a/assets-new/css/index.css
+++ b/assets-new/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
 a,
 a:hover {
   text-decoration: none;
